{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 502,
  "lineage": "851310ee-ecf1-ddd2-6ce2-f232950a5505",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:996158444070:loadbalancer/net/accounting-hub-alb-dev/fad54816552cd39f",
            "arn_suffix": "net/accounting-hub-alb-dev/fad54816552cd39f",
            "dns_name": "accounting-hub-alb-dev-fad54816552cd39f.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:996158444070:loadbalancer/net/accounting-hub-alb-dev/fad54816552cd39f",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "accounting-hub-alb-dev",
            "security_groups": [
              "sg-0b9f385632dc5c6bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004c23dd3f21601b2"
              },
              {
                "subnet_id": "subnet-05668d3946b1d4b33"
              }
            ],
            "subnets": [
              "subnet-004c23dd3f21601b2",
              "subnet-05668d3946b1d4b33"
            ],
            "tags": {
              "Application": "accounting hub",
              "Stage": "dev"
            },
            "tags_all": {
              "Application": "accounting hub",
              "Stage": "dev"
            },
            "vpc_id": "vpc-00465b6029aa62142",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:996158444070:listener/net/accounting-hub-alb-dev/fad54816552cd39f/8cb2c3c101d1a5fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:996158444070:targetgroup/accounting-hub-tg-dev/5fb7a75f09b51983",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:996158444070:listener/net/accounting-hub-alb-dev/fad54816552cd39f/8cb2c3c101d1a5fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:996158444070:loadbalancer/net/accounting-hub-alb-dev/fad54816552cd39f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_target_group.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:996158444070:listener/net/accounting-hub-alb-dev/fad54816552cd39f/883f8de85a3b2cbd",
            "certificate_arn": "arn:aws:acm:us-east-1:996158444070:certificate/2c5188c5-e741-4705-8ae9-ac50089e49e1",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:996158444070:targetgroup/accounting-hub-tg-dev/5fb7a75f09b51983",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:996158444070:listener/net/accounting-hub-alb-dev/fad54816552cd39f/883f8de85a3b2cbd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:996158444070:loadbalancer/net/accounting-hub-alb-dev/fad54816552cd39f",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "TLS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_target_group.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:996158444070:targetgroup/accounting-hub-tg-dev/5fb7a75f09b51983",
            "arn_suffix": "targetgroup/accounting-hub-tg-dev/5fb7a75f09b51983",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:996158444070:targetgroup/accounting-hub-tg-dev/5fb7a75f09b51983",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "accounting-hub-tg-dev",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Application": "accounting hub",
              "Stage": "dev"
            },
            "tags_all": {
              "Application": "accounting hub",
              "Stage": "dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00465b6029aa62142"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}